<resources>
    <string name="app_name">EasyChef</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="button_text_login">Log In</string>
    <string name="button_text_register">Register</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="button_text_logout">Log Out</string>
    <string name="save_recipe">Save</string>
    <string name="pantry">Pantry</string>
    <string name="add">Add</string>
    <string name="add_an_item_here">Add an item here!</string>
    <string name="get_recipes">Get Recipes</string>
    <string name="favorites">Favorites</string>
    <string name="unsave_recipe">Unsave</string>
    <string name="search_for_a_recipe">Search for a recipe!</string>
    <string name="empty" />
    <string name="start_typing_an_ingredient_here">Start typing an ingredient here!</string>
    <string name="ready_in_minutes">Ready in # minutes</string>
    <string name="servings">Makes # servings</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="dietary_restriction_information">Dietary Restriction Information</string>
    <string name="ingredients">Ingredients</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="gluten_free">Gluten-free</string>
    <string name="dairy_free">Dairy-free</string>
    <string name="steps">Steps</string>
    <string name="step">Step #</string>
    <string name="ingredients_needed">Ingredients Needed:</string>
    <string name="equipment_needed">Equipment Needed:</string>
    <string name="step_text_here">Step text here</string>
    <string name="action_settings">Settings</string>
    <string name="recipe_steps">Recipe Steps</string>
    <string name="explore">Explore</string>
    <string name="delete_account">Delete Account</string>
    <string name="edit_username">Change Username</string>
    <string name="edit_password">Change Password</string>
    <string name="easychef">EasyChef</string>
</resources>