<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_ingredient"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/pantry"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favorites"
        android:icon="@android:drawable/btn_star"
        android:title="@string/favorites"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>