<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/border_margin"
        android:descendantFocusability="blocksDescendants"
        tools:context=".fragments.RecipeOverviewFragment">

        <ImageView
            android:id="@+id/ivRecipeDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/recipe_title"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvRecipeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivRecipeDetails"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/border_margin"
            android:layout_marginBottom="4dp"
            android:text="@string/recipe_title"
            android:textColor="@color/navy_blue"
            android:textSize="19sp"
            android:textStyle="bold" />

        <ToggleButton
            android:id="@+id/btnSaveRecipe"
            android:layout_width="87dp"
            android:layout_height="87dp"
            android:layout_alignBottom="@id/ivRecipeDetails"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/heart_icon_blue"
            android:checked="false"
            android:textOff="@string/empty"
            android:textOn="@string/empty" />

        <TextView
            android:id="@+id/tvReadyInMinutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvRecipeTitle"
            android:layout_alignParentStart="true"
            android:text="@string/ready_in_minutes"
            android:textSize="@dimen/recipe_subtext_size"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tvServings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvReadyInMinutes"
            android:layout_alignParentStart="true"
            android:text="@string/servings"
            android:textSize="@dimen/recipe_subtext_size"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tvDietaryRestrictionTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvServings"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/dietary_restriction_information"
            android:textColor="@color/navy_blue"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tvVegetarian"
            android:layout_width="190dp"
            android:layout_height="37dp"
            android:layout_below="@id/tvDietaryRestrictionTitleText"
            android:layout_marginEnd="@dimen/layout_margin"
            android:layout_marginBottom="@dimen/border_margin"
            android:background="@drawable/rounded_rectangle_dietary_restr"
            android:text="@string/vegetarian"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvVegan"
            android:layout_width="190dp"
            android:layout_height="37dp"
            android:layout_below="@id/tvDietaryRestrictionTitleText"
            android:layout_marginBottom="@dimen/border_margin"
            android:layout_toEndOf="@id/tvVegetarian"
            android:background="@drawable/rounded_rectangle_dietary_restr"
            android:text="@string/vegan"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvGlutenFree"
            android:layout_width="190dp"
            android:layout_height="37dp"
            android:layout_below="@id/tvVegetarian"
            android:layout_marginEnd="@dimen/layout_margin"
            android:layout_marginBottom="@dimen/border_margin"
            android:background="@drawable/rounded_rectangle_dietary_restr"
            android:text="@string/gluten_free"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvDairyFree"
            android:layout_width="190dp"
            android:layout_height="37dp"
            android:layout_below="@id/tvVegan"
            android:layout_marginBottom="@dimen/border_margin"
            android:layout_toEndOf="@id/tvGlutenFree"
            android:background="@drawable/rounded_rectangle_dietary_restr"
            android:text="@string/dairy_free"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvIngredientTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvGlutenFree"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp"
            android:text="@string/ingredients"
            android:textColor="@color/navy_blue"
            android:textSize="17sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvIngredientTitleText"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="false"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="30dp" />
    </RelativeLayout>
</ScrollView>