<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/border_margin"
    tools:context=".fragments.RecipeDetailsFragment">

    <ImageView
        android:id="@+id/ivRecipeDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvRecipeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivRecipeDetails"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/border_margin"
        android:layout_marginBottom="4dp"
        android:text="TextView"
        android:textSize="@dimen/recipe_text_size" />

    <ToggleButton
        android:id="@+id/btnSaveRecipe"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:layout_below="@+id/ivRecipeDetails"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-76dp"
        android:layout_marginEnd="3dp"
        android:background="@android:drawable/btn_star_big_off"
        android:checked="false"
        android:textOff="@string/empty"
        android:textOn="@string/empty" />

    <TextView
        android:id="@+id/tvReadyInMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvRecipeTitle"
        android:layout_alignParentStart="true"
        android:text="@string/ready_in_minutes" />

    <TextView
        android:id="@+id/tvServings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvRecipeTitle"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/end_servings_margin"
        android:text="@string/servings" />
</RelativeLayout>