<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@drawable/rounded_rectangle">


    <TextView
        android:id="@+id/tvStepNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/border_margin"
        android:layout_marginTop="4dp"
        android:autoSizeTextType="uniform"
        android:text="@string/step"
        android:textColor="@color/navy_blue"
        android:textSize="@dimen/recipe_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvLengthTimeTaken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tvStepNumber"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="6dp"
        android:textColor="@color/navy_blue"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tvStepText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvStepNumber"
        android:layout_alignParentStart="false"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="@dimen/border_margin"
        android:layout_marginTop="4dp"
        android:text="@string/step_text_here"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvIngredientTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvStepText"
        android:layout_alignParentStart="false"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="@dimen/border_margin"
        android:layout_marginTop="4dp"
        android:text="@string/ingredients_needed"
        android:textColor="@color/navy_blue"
        android:textSize="16sp"
        android:textStyle="italic" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvIngredientsNeeded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvIngredientTitle"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp" />

    <TextView
        android:id="@+id/tvEquipmentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rvIngredientsNeeded"
        android:layout_alignParentStart="false"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="@dimen/border_margin"
        android:layout_marginTop="4dp"
        android:text="@string/equipment_needed"
        android:textColor="@color/navy_blue"
        android:textSize="16sp"
        android:textStyle="italic" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvEquipmentNeeded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvEquipmentTitle"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp" />

</RelativeLayout>
